# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/notifications": {
             "post": {
-                "description": "Sends a notification via NotificationService",
+                "description": "Создает новое уведомление для указанного получателя",
                 "consumes": [
                     "application/json"
                 ],
@@ -16,7 +16,7 @@
                 "tags": [
                     "notifications"
                 ],
-                "summary": "Create a new notification",
+                "summary": "Создать уведомление",
                 "parameters": [
                     {
                         "description": "Notification payload",
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Notification"
+                            "$ref": "#/definitions/notifications_api.notificationsRequest"
                         }
                     }
                 ],
@@ -32,19 +32,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Notification"
+                            "$ref": "#/definitions/notifications_api.notificationsResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad request",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/notifications_api.errorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal error",
+                        "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/notifications_api.errorResponse"
                         }
                     }
                 }
@@ -52,19 +52,36 @@
         }
     },
     "definitions": {
-        "models.Notification": {
+        "notifications_api.errorResponse": {
             "type": "object",
             "properties": {
-                "created_at": {
+                "error": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
+                }
+            }
+        },
+        "notifications_api.notificationsRequest": {
+            "type": "object",
+            "required": [
+                "message",
+                "recipient"
+            ],
+            "properties": {
                 "message": {
                     "type": "string"
                 },
                 "recipient": {
+                    "type": "string"
+                }
+            }
+        },
+        "notifications_api.notificationsResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 }
             }
